chore: refactor CSS for 404 page to fix overflow issue, design and functionility of course chpters reorder section

--- a/app/404page.css
+++ b/app/404page.css
@@ -17,7 +17,7 @@
     background-image: linear-gradient(135deg, #1b0034 10%, #33265c 100%);
     background-attachment: fixed;
     background-size: cover;
-    overflow: hidden;
+    overflow-y: auto;
 }
 
 .error {
